refactored to have a base.html that is extended by index etc. Also fixed font sizing on mobile

--- a/WICSApp/static/css/one-page-wonder.css
+++ b/WICSApp/static/css/one-page-wonder.css
@@ -20,11 +20,11 @@ body {
 }
 
 .headline {
-    padding: 120px 0;
+    padding: 150px 0;
 }
 
 .headline h1 {
-    font-size: 130px;
+    font-size: 120px;
     background: #fff;
     background: rgba(255,255,255,0.5);
 }
@@ -63,7 +63,7 @@ footer {
 
 @media(max-width:1200px) {
     .headline h1 {
-        font-size: 140px;
+        font-size: 130px;
     }
 
     .headline h2 {
@@ -89,7 +89,7 @@ footer {
 
 @media(max-width:991px) {
     .headline h1 {
-        font-size: 105px;
+        font-size: 90px;
     }
 
     .headline h2 {
@@ -133,7 +133,7 @@ footer {
 
 @media(max-width:668px) {
     .headline h1 {
-        font-size: 70px;
+        font-size: 60px;
     }
 
     .headline h2 {
